opam-version: "2.0"
maintainer: "dev@clarus.me"
homepage: "https://github.com/clarus/io-system"
dev-repo: "git+https://github.com/clarus/io-system.git"
bug-reports: "https://github.com/clarus/io-system/issues"
authors: ["Guillaume Claret"]
license: "MIT"
build: [
  [make "-C" "ocaml" "-j%{jobs}%"]
]
install: [
  [make "-C" "ocaml" "install"]
]
depends: [
  "lwt" {>= "2.4.7"}
  "ocaml" {>= "4.00.0"}
  "ocamlbuild"
  "ocamlfind"
  "num"
]
tags: [
  "keyword:effects"
  "keyword:extraction"
]
synopsis: "Extraction to OCaml of system effects"
