opam-version: "2.0"
maintainer: "dev@clarus.me"
homepage: "https://github.com/clarus/io-system"
dev-repo: "git+https://github.com/clarus/io-system.git"
bug-reports: "https://github.com/clarus/io-system/issues"
authors: ["Guillaume Claret"]
license: "MIT"
build: [
  ["./configure.sh"]
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "coq" {>= "8.5"}
  "coq-function-ninjas"
  "coq-list-string" {>= "2.0.0"}
  "coq-io" {>= "4.0.0"}
  "coq-io-system-ocaml" {>= "2.3.0"}
]
tags: [
  "keyword:effects"
  "keyword:extraction"
  "logpath:Io.System"
]
synopsis: "System effects for Coq"
